--- a/configs/qt210_defconfig
+++ b/configs/qt210_defconfig
@@ -93,6 +93,7 @@ CONFIG_ARCH_S5PC1XX=y
 # CONFIG_ARCH_MX7ULP is not set
 # CONFIG_ARCH_MX7 is not set
 # CONFIG_ARCH_MX6 is not set
+CONFIG_SPL_LDSCRIPT="arch/$(ARCH)/cpu/u-boot-spl.lds"
 # CONFIG_ARCH_MX5 is not set
 # CONFIG_ARCH_QEMU is not set
 # CONFIG_ARCH_RMOBILE is not set
@@ -141,12 +142,22 @@ CONFIG_ARCH_S5PC1XX=y
 # CONFIG_TARGET_THUNDERX_88XX is not set
 # CONFIG_ARCH_ASPEED is not set
 CONFIG_SYS_TEXT_BASE=0x34800000
+# CONFIG_SPL_GPIO_SUPPORT is not set
+CONFIG_SPL_LIBCOMMON_SUPPORT=y
+CONFIG_SPL_LIBGENERIC_SUPPORT=y
 CONFIG_SYS_MALLOC_F_LEN=0x400
+# CONFIG_SPL_SERIAL_SUPPORT is not set
+# CONFIG_SPL_DRIVERS_MISC_SUPPORT is not set
 # CONFIG_TARGET_S5P_GONI is not set
 # CONFIG_TARGET_SMDKC100 is not set
 CONFIG_TARGET_QT210=y
 CONFIG_SPL_SYS_MALLOC_F_LEN=0x400
+CONFIG_SPL=y
 CONFIG_IDENT_STRING=" for SMDKC100"
+# CONFIG_SPL_FAT_SUPPORT is not set
+# CONFIG_SPL_LIBDISK_SUPPORT is not set
+# CONFIG_SPL_SPI_FLASH_SUPPORT is not set
+# CONFIG_SPL_SPI_SUPPORT is not set
 # CONFIG_ARMV7_LPAE is not set
 # CONFIG_CMD_DEKBLOB is not set
 # CONFIG_CMD_HDMIDETECT is not set
@@ -265,6 +276,51 @@ CONFIG_HASH=y
 #
 # SPL / TPL
 #
+CONFIG_SUPPORT_SPL=y
+CONFIG_SPL_FRAMEWORK=y
+# CONFIG_SPL_BOARD_INIT is not set
+# CONFIG_SPL_BOOTROM_SUPPORT is not set
+CONFIG_SPL_RAW_IMAGE_SUPPORT=y
+CONFIG_SPL_LEGACY_IMAGE_SUPPORT=y
+# CONFIG_SPL_SYS_MALLOC_SIMPLE is not set
+# CONFIG_TPL_SYS_MALLOC_SIMPLE is not set
+# CONFIG_SPL_STACK_R is not set
+# CONFIG_SPL_SEPARATE_BSS is not set
+# CONFIG_SPL_DISABLE_BANNER_PRINT is not set
+# CONFIG_SPL_DISPLAY_PRINT is not set
+# CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_USE_SECTOR is not set
+# CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_USE_PARTITION is not set
+# CONFIG_SPL_CPU_SUPPORT is not set
+# CONFIG_SPL_CRYPTO_SUPPORT is not set
+# CONFIG_SPL_HASH_SUPPORT is not set
+# CONFIG_SPL_DMA_SUPPORT is not set
+# CONFIG_SPL_ENV_SUPPORT is not set
+# CONFIG_SPL_EXT_SUPPORT is not set
+# CONFIG_SPL_FPGA_SUPPORT is not set
+# CONFIG_SPL_I2C_SUPPORT is not set
+# CONFIG_SPL_MPC8XXX_INIT_DDR_SUPPORT is not set
+# CONFIG_SPL_MTD_SUPPORT is not set
+# CONFIG_SPL_MUSB_NEW_SUPPORT is not set
+# CONFIG_SPL_NAND_SUPPORT is not set
+# CONFIG_SPL_NET_SUPPORT is not set
+# CONFIG_SPL_NO_CPU_SUPPORT is not set
+# CONFIG_SPL_NOR_SUPPORT is not set
+# CONFIG_SPL_XIP_SUPPORT is not set
+# CONFIG_SPL_ONENAND_SUPPORT is not set
+# CONFIG_SPL_OS_BOOT is not set
+# CONFIG_SPL_PCI_SUPPORT is not set
+# CONFIG_SPL_PCH_SUPPORT is not set
+# CONFIG_SPL_POST_MEM_SUPPORT is not set
+# CONFIG_SPL_RESET_SUPPORT is not set
+# CONFIG_SPL_POWER_SUPPORT is not set
+# CONFIG_SPL_RAM_SUPPORT is not set
+# CONFIG_SPL_RTC_SUPPORT is not set
+# CONFIG_SPL_SATA_SUPPORT is not set
+# CONFIG_SPL_THERMAL is not set
+# CONFIG_SPL_USB_HOST_SUPPORT is not set
+# CONFIG_SPL_USB_GADGET_SUPPORT is not set
+# CONFIG_SPL_WATCHDOG_SUPPORT is not set
+# CONFIG_SPL_AM33XX_ENABLE_RTC32K_OSC is not set
 
 #
 # Command line interface
@@ -314,6 +370,7 @@ CONFIG_CMD_IMI=y
 # CONFIG_CMD_IMLS is not set
 CONFIG_CMD_XIMG=y
 # CONFIG_CMD_POWEROFF is not set
+# CONFIG_CMD_SPL is not set
 # CONFIG_CMD_FITUPD is not set
 # CONFIG_CMD_THOR_DOWNLOAD is not set
 # CONFIG_CMD_ZBOOT is not set
@@ -500,11 +557,17 @@ CONFIG_MTDPARTS_DEFAULT="mtdparts=s3c-onenand:256k(bootloader),128k@0x40000(para
 #
 CONFIG_PARTITIONS=y
 # CONFIG_MAC_PARTITION is not set
+# CONFIG_SPL_MAC_PARTITION is not set
 CONFIG_DOS_PARTITION=y
+CONFIG_SPL_DOS_PARTITION=y
 # CONFIG_ISO_PARTITION is not set
+# CONFIG_SPL_ISO_PARTITION is not set
 # CONFIG_AMIGA_PARTITION is not set
+# CONFIG_SPL_AMIGA_PARTITION is not set
 # CONFIG_EFI_PARTITION is not set
+# CONFIG_SPL_EFI_PARTITION is not set
 # CONFIG_PARTITION_UUIDS is not set
+# CONFIG_SPL_PARTITION_UUIDS is not set
 CONFIG_SUPPORT_OF_CONTROL=y
 CONFIG_DTC=y
 
@@ -513,6 +576,7 @@ CONFIG_DTC=y
 #
 CONFIG_OF_CONTROL=y
 # CONFIG_OF_BOARD_FIXUP is not set
+# CONFIG_SPL_OF_CONTROL is not set
 # CONFIG_OF_LIVE is not set
 CONFIG_OF_SEPARATE=y
 # CONFIG_OF_EMBED is not set
@@ -547,6 +611,7 @@ CONFIG_NET=y
 # Generic Driver Options
 #
 CONFIG_DM=y
+# CONFIG_SPL_DM is not set
 CONFIG_DM_WARN=y
 # CONFIG_DM_DEBUG is not set
 CONFIG_DM_DEVICE_REMOVE=y
@@ -902,7 +967,9 @@ CONFIG_HAVE_PRIVATE_LIBGCC=y
 CONFIG_LIB_UUID=y
 CONFIG_PRINTF=y
 CONFIG_SPRINTF=y
+CONFIG_SPL_SPRINTF=y
 CONFIG_STRTO=y
+CONFIG_SPL_STRTO=y
 CONFIG_USE_PRIVATE_LIBGCC=y
 CONFIG_SYS_HZ=1000
 # CONFIG_USE_TINY_PRINTF is not set
